# cookiecutter-cookiecutter

./: .pydocstyle  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  cookiecutter.json.donotrender  pyproject.toml
{{cookiecutter.project_slug}}/.github/: issue_template.md  pull_request_template.md
{{cookiecutter.project_slug}}/hooks/: pre_gen_project.py.donotrender
{{cookiecutter.project_slug}}/tests/: test_bake_project.py
{{cookiecutter.project_slug}}/{{cookiecutter._inner_dir}}/: CHANGELOG.md.donotrender  CONTRIBUTING.md.donotrender  README.md.donotrender
