[tool.poetry]
name = "cookiecutter-python-package"
version = "{{ cookiecutter.project_version }}"
{% if cookiecutter.project_summary %}description = "{{ cookiecutter.project_summary }}"{% endif %}
authors = ["{{cookiecutter.full_name}}"]
license = "{{ cookiecutter.project_license }}"

[tool.poetry.dependencies]
python = "{{ cookiecutter.project_python_version }}"

[tool.poetry.dev-dependencies]
cookiecutter = "^1.7.2"
black = "^20.8b1"
pytest-cookies = "^0.5.1"
pdbpp = "^0.10.2"
pydocstyle = "^5.1.1"

[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
